[gd_scene load_steps=11 format=3 uid="uid://c0pi4bt0x8p3x"]

[ext_resource type="Script" uid="uid://dhqhmekc71aym" path="res://AudioManager/AudioManager.gd" id="1_ukwy1"]
[ext_resource type="AudioStream" uid="uid://b720vpynny2ri" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 01 - Pink Bloom.ogg" id="2_u2agx"]
[ext_resource type="AudioStream" uid="uid://ckwaa4vnql5y6" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 02 - Portal to Underworld.ogg" id="3_054j6"]
[ext_resource type="AudioStream" uid="uid://b8lwqdmen8ban" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 03 - To the Unknown.ogg" id="4_17h21"]
[ext_resource type="AudioStream" uid="uid://lssamk0njjn7" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 04 - Valley of Spirits.ogg" id="5_85v0g"]
[ext_resource type="AudioStream" uid="uid://b28n83mcrgtcq" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 05 - Western Cyberhorse.ogg" id="6_dwdky"]
[ext_resource type="AudioStream" uid="uid://btstxuchft051" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 06 - Diamonds on The Ceiling.ogg" id="7_0g8yc"]
[ext_resource type="AudioStream" uid="uid://dkjxq48ir32yf" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 07 - The Hidden One.ogg" id="8_l24u0"]
[ext_resource type="AudioStream" uid="uid://etp6qhu4udx2" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 08 - Lost Spaceship's Signal.ogg" id="9_y8eeq"]
[ext_resource type="AudioStream" uid="uid://bunljuldtmo6q" path="res://Audio/music/DavidKBD - Pink Bloom Pack - 09 - Lightyear City.ogg" id="10_bimrg"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_ukwy1")
musics = Array[AudioStream]([ExtResource("2_u2agx"), ExtResource("3_054j6"), ExtResource("4_17h21"), ExtResource("5_85v0g"), ExtResource("6_dwdky"), ExtResource("7_0g8yc"), ExtResource("8_l24u0"), ExtResource("9_y8eeq"), ExtResource("10_bimrg")])

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Music"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
